--- a/Address.html
+++ b/Address.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StyleZilla : Address</title>
   </head>
-  <link rel="stylesheet" href="address.css">
+  <link rel="stylesheet" href="CSS/address.css">
+  <link rel="stylesheet" href="CSS/MediaQ.css">
   <body>
     
 
@@ -282,5 +283,6 @@
 
   </body>
 </html>
-<script src="address.js"></script>
+<script src="JS/common.js"></script>
+<script src="JS/address.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
