--- a/Admin-Login.html
+++ b/Admin-Login.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StyleZilla: Admin: Login</title>
-    <link rel="stylesheet" href="Admin-Login.css" />
+    <link rel="stylesheet" href="CSS/Admin-Login.css" />
+    <link rel="stylesheet" href="./CSS/MediaQ.css" />
   </head>
 
   <body>
@@ -78,7 +79,7 @@
       </div>
     </div>
 
-    <script src="Admin-login.js"></script>
+    <script src="JS/Admin-login.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </body>
 </html>
