--- a/Orders.html
+++ b/Orders.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin: Orders & Payments</title>
+    
+    <link rel="stylesheet" href="CSS/MediaQ.css">
     <link rel="stylesheet" href="CSS/Orders.css" />
     <link rel="stylesheet" href="CSS/HeaderFooter.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -81,7 +83,7 @@
   </not prettier>
   </body>
 </html>
-<script src="Js/Orders.js"></script>
+<script src="JS/Orders.js"></script>
 
 <!--??--------------------------------------------- <SweetAlert Library> ----------------------------------------------->
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
