--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StyleZilla : Login</title>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="./CSS/MediaQ.css" />
+    <link rel="stylesheet" href="CSS/login.css" />
   </head>
   <div id="nav">
     <a href="index.html"
@@ -58,5 +59,6 @@
   </body>
 </html>
 
-<script src="login.js"></script>
+<script src="JS/common.js"></script>
+<script src="JS/login.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
