--- a/Admin.html
+++ b/Admin.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StyleZilla-Admin</title>
+    <link rel="stylesheet" href="CSS/MediaQ.css">
     <link rel="stylesheet" href="CSS/Admin.css" />
     <link rel="stylesheet" href="CSS/HeaderFooter.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -147,7 +148,7 @@
     <footer></footer>
   </body>
 </html>
-<script src="Js/Admin.js"></script>
+<script src="JS/Admin.js"></script>
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
