--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StyleZilla:Checkout</title>
+    <link rel="stylesheet" href="CSS/MediaQ.css" />
     <link rel="stylesheet" href="CSS/checkout.css" />
     <link rel="stylesheet" href="CSS/HeaderFooter.css" />
   </head>
@@ -255,7 +256,8 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
   </body>
 </html>
-<script src="Js/checkout.js"></script>
+<script src="JS/common.js"></script>
+<script src="JS/checkout.js"></script>
 
 <!-- ?? SweetAlert Library -->
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
