--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>StyleZilla</title>
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./CSS/MediaQ.css">
+  <link rel="stylesheet" href="./CSS/MediaQ.css">
+  <link rel="stylesheet" href="./CSS/index.css">
+  <link rel="stylesheet" href="./CSS/HeaderFooter.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
+<!--todo--------------------------------------------- <Header Start> ----------------------------------------------->
 
   <div id="top_bar">
     <div id="left_top">
@@ -27,12 +31,13 @@
     </div>
   </div>
 
+
 <div id="nav">
  
+  <div><a href="index.html"> <img src="./images/StyleZillaWIthoutBackground.png" alt="" id="logo"></a></div>
   <div id="nav_bar">
    
   
-    <a href="index.html"> <img src="./images/StyleZillaWIthoutBackground.png" alt="" id="logo"></a>
     <a href="womens_Index.html" id="women_list_head" class="nav_menu">
       <h4>Women</h4>
     </a>
@@ -64,8 +69,14 @@
   </div>
 </div>
 
-  <!-- drop down list -->
- <div id="drop_down">
+<div id="EmptyNavSpace"></div>
+
+<div id="yellopatti">
+  Watches up to 40% off – Titan/ Fossil/Armani - <span style="color: rgb(132, 10, 10);">Trending Offers !</span>
+</div>
+<!-- drop down list -->
+
+  <div id="drop_down">
   <!-- women list -->
 
   <div id="women_list">
@@ -344,14 +355,9 @@
 
   </div>
 </div>
- <!-- login signup popup
- <div id="pop_up">
-  <div>
-    <p>For Richer expirence</p>
-    <a href="">SignIn/SignUp</a>
-  </div>
- </div> -->
- 
+<!--todo--------------------------------------------- <Header End> ----------------------------------------------->
+
+
   <!-- banner  -->
   <div class="container" id="banner">
 
@@ -668,136 +674,140 @@
   </div>
 </div>
 
-<!-- subscribe section -->
-<div id="subscribe">
-  <div id="email_subs">
-    <h1>Subscribe to our awesome emails.</h1>
-    <p>Get our latest offers and news straight in your inbox.</p>
-    <input type="email" placeholder="Please Enter Your Email Address">
-    <button>SUBSCRIBE</button>
+<!--todo--------------------------------------------- <Footer Start> ----------------------------------------------->
+<section id="FooterSection">
+  <div id="subscribe">
+    <div id="email_subs">
+      <h1>Subscribe to our awesome emails.</h1>
+      <p>Get our latest offers and news straight in your inbox.</p>
+      <input type="email" placeholder="Please Enter Your Email Address">
+      <button>SUBSCRIBE</button>
+    </div>
+    <div id="play_store">
+      <h1>Download our apps</h1>
+      <p>Shop our products and offers on-the-go.</p>
+      <button> Download on the App Store</button>
+      <button>Get It On Google Play</button>
+    </div>
   </div>
-  <div id="play_store">
-    <h1>Download our apps</h1>
-    <p>Shop our products and offers on-the-go.</p>
-    <button> Download on the App Store</button>
-    <button>Get It On Google Play</button>
+  
+  <!--Footer  -->
+  <div id="footer">
+    <div>
+      <h5>Womens</h5>
+      <a href="">Tops</a><br>
+      <a href="">Ethnicwear</a><br>
+      <a href="">Bottoms</a><br>
+      <a href="">Dresses & Jumpsuits</a><br>
+      <a href="">Winterwear</a><br>
+      <a href="">Lingerie</a><br>
+      <a href="">Nightwear</a><br>
+      <a href="">Sportswear</a><br>
+      <a href="">Beauty</a><br>
+      <a href="">Watches & Sunglasses</a><br>
+    </div>
+    <div>
+      <h5>Mens</h5>
+      <a href="">Tops</a><br>
+      <a href="">Ethnicwear</a><br>
+      <a href="">Bottoms</a><br>
+      <a href="">Sportswear</a><br>
+      <a href="">Winterwear</a><br>
+      <a href="">Innerwear</a><br>
+      <a href="">Grooming</a><br>
+      <a href="">Sportswear</a><br>
+  
+      <a href="">Watches & Sunglasses</a><br>
+    </div>
+    <div>
+      <h5>Kids</h5>
+      <a href="">Girls Clothing</a><br>
+      <a href="">Boys Clothing</a><br>
+      <a href="">Infants Girls</a><br>
+      <a href="">Infants Boys</a><br>
+      <a href="">Winterwear</a><br>
+      <a href="">Add ons</a><br>
+      <a href="">The Teen Shop</a><br>
+  
+    </div>
+    <div>
+      <h5>Shops&Bags</h5>
+      <a href="">Girls</a><br>
+      <a href="">Boys</a><br>
+      <a href="">Women</a><br>
+      <a href="">Mens</a><br>
+      <a href="">Women Accessories</a><br>
+      <a href="">Men Accessories</a><br>
+      <a href="">Essential</a><br>
+    </div>
+    <div>
+      <h5>Beauty</h5>
+      <a href="">Makeup Eyes</a><br>
+      <a href="">Makeup Face</a><br>
+      <a href="">Makeup Nails</a><br>
+      <a href="">Mens</a><br>
+      <a href="">Perfumes</a><br>
+  
+    </div>
+    <div>
+      <h5>Explore</h5>
+      <a href="">Online Offers</a><br>
+      <a href="">Store Offers</a><br>
+      <a href="">Online Gift Card</a><br>
+      <a href="">Store Gift Card</a><br>
+      <a href="">Stores Nearby</a><br>
+      <a href="">EDGE Membership</a><br>
+      <a href="">Shop on WhatsApp</a><br>
+      <a href="">Fashion VLOG</a><br>
+      <a href="">Join CIRCLEMAG</a><br>
+      <a href="">SBI Offers</a><br>
+      <a href="">Homecentre</a><br>
+    </div>
+    <div>
+      <h5>About Us</h5>
+      <a href="">About us</a><br>
+      <a href="">Careers</a><br>
+      <a href="">Take a Tour</a><br>
+      <a href="">Blog</a><br>
+      <a href="">Store Locator</a><br>
+      <a href="">Landmark Cares</a><br>
+  
+    </div>
+    <div>
+      <h5>Help</h5>
+      <a href="">Contact us</a><br>
+      <a href="">Shipping</a><br>
+      <a href="">Returns Process</a><br>
+      <a href="">Returns Policy</a><br>
+      <a href="">Help Centre</a><br>
+  
+    </div>
   </div>
-</div>
-
-<!--Footer  -->
-<div id="footer">
-  <div>
-    <h5>Womens</h5>
-    <a href="">Tops</a><br>
-    <a href="">Ethnicwear</a><br>
-    <a href="">Bottoms</a><br>
-    <a href="">Dresses & Jumpsuits</a><br>
-    <a href="">Winterwear</a><br>
-    <a href="">Lingerie</a><br>
-    <a href="">Nightwear</a><br>
-    <a href="">Sportswear</a><br>
-    <a href="">Beauty</a><br>
-    <a href="">Watches & Sunglasses</a><br>
+  <!-- contact option -->
+  <div id="contact">
+  
+    <div>
+      <p>You can talk to us</p>
+      <p>📞1800-123-1555</p>
+    </div>
+    <div>
+      <p>Help center</p>
+      <p>📧 stylezilla.info@mail.com</p>
+    </div>
+    <div>
+      <p>Write to us</p>
+      <p>🗃️ help.stylezilla.com</p>
+    </div>
+    <div>
+      <img src="https://cdn-icons-png.flaticon.com/128/3488/3488299.png" alt="">
+      <img src="https://cdn-icons-png.flaticon.com/128/733/733558.png" alt="">
+      <img src="https://cdn-icons-png.flaticon.com/128/2504/2504947.png" alt="">
+    </div>
   </div>
-  <div>
-    <h5>Mens</h5>
-    <a href="">Tops</a><br>
-    <a href="">Ethnicwear</a><br>
-    <a href="">Bottoms</a><br>
-    <a href="">Sportswear</a><br>
-    <a href="">Winterwear</a><br>
-    <a href="">Innerwear</a><br>
-    <a href="">Grooming</a><br>
-    <a href="">Sportswear</a><br>
-
-    <a href="">Watches & Sunglasses</a><br>
-  </div>
-  <div>
-    <h5>Kids</h5>
-    <a href="">Girls Clothing</a><br>
-    <a href="">Boys Clothing</a><br>
-    <a href="">Infants Girls</a><br>
-    <a href="">Infants Boys</a><br>
-    <a href="">Winterwear</a><br>
-    <a href="">Add ons</a><br>
-    <a href="">The Teen Shop</a><br>
-
-  </div>
-  <div>
-    <h5>Shops&Bags</h5>
-    <a href="">Girls</a><br>
-    <a href="">Boys</a><br>
-    <a href="">Women</a><br>
-    <a href="">Mens</a><br>
-    <a href="">Women Accessories</a><br>
-    <a href="">Men Accessories</a><br>
-    <a href="">Essential</a><br>
-  </div>
-  <div>
-    <h5>Beauty</h5>
-    <a href="">Makeup Eyes</a><br>
-    <a href="">Makeup Face</a><br>
-    <a href="">Makeup Nails</a><br>
-    <a href="">Mens</a><br>
-    <a href="">Perfumes</a><br>
-
-  </div>
-  <div>
-    <h5>Explore</h5>
-    <a href="">Online Offers</a><br>
-    <a href="">Store Offers</a><br>
-    <a href="">Online Gift Card</a><br>
-    <a href="">Store Gift Card</a><br>
-    <a href="">Stores Nearby</a><br>
-    <a href="">EDGE Membership</a><br>
-    <a href="">Shop on WhatsApp</a><br>
-    <a href="">Fashion VLOG</a><br>
-    <a href="">Join CIRCLEMAG</a><br>
-    <a href="">SBI Offers</a><br>
-    <a href="">Homecentre</a><br>
-  </div>
-  <div>
-    <h5>About Us</h5>
-    <a href="">About us</a><br>
-    <a href="">Careers</a><br>
-    <a href="">Take a Tour</a><br>
-    <a href="">Blog</a><br>
-    <a href="">Store Locator</a><br>
-    <a href="">Landmark Cares</a><br>
-
-  </div>
-  <div>
-    <h5>Help</h5>
-    <a href="">Contact us</a><br>
-    <a href="">Shipping</a><br>
-    <a href="">Returns Process</a><br>
-    <a href="">Returns Policy</a><br>
-    <a href="">Help Centre</a><br>
-
-  </div>
-</div>
-<!-- contact option -->
-<div id="contact">
-
-  <div>
-    <p>You can talk to us</p>
-    <p>📞1800-123-1555</p>
-  </div>
-  <div>
-    <p>Help center</p>
-    <p>📧 stylezilla.info@mail.com</p>
-  </div>
-  <div>
-    <p>Write to us</p>
-    <p>🗃️ help.stylezilla.com</p>
-  </div>
-  <div>
-    <img src="https://cdn-icons-png.flaticon.com/128/3488/3488299.png" alt="">
-    <img src="https://cdn-icons-png.flaticon.com/128/733/733558.png" alt="">
-    <img src="https://cdn-icons-png.flaticon.com/128/2504/2504947.png" alt="">
-  </div>
-</div>
+</section>
+<!--todo--------------------------------------------- <Footer End> ----------------------------------------------->
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<script src="JS/common.js"></script>
+<script src="JS/index.js"></script>
 </body>
 </html>
-<script src="./index.js"></script>
