--- a/oneImageDetail.html
+++ b/oneImageDetail.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StyleZilla : Product Info</title>
-    <link rel="stylesheet" href="oneImageDetail.css" />
+    <link rel="stylesheet" href="./CSS/MediaQ.css" />
+    <link rel="stylesheet" href="CSS/oneImageDetail.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
