--- a/payment.html
+++ b/payment.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StyleZilla : Payment</title>
-    <link rel="stylesheet" href="payment.css" />
+    <link rel="stylesheet" href="./CSS/MediaQ.css">
+    <link rel="stylesheet" href="CSS/payment.css" />
   </head>
 
   <body>
