--- a/signup.html
+++ b/signup.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StyleZilla : Signup</title>
-
-    <link rel="stylesheet" href="signup.css" />
+    <link rel="stylesheet" href="./CSS/MediaQ.css" />
+    <link rel="stylesheet" href="CSS/signup.css" />
   </head>
   <div id="nav">
     <a href="index.html"
