--- a/mensAllProducts.html
+++ b/mensAllProducts.html
@@ -333,5 +333,5 @@
     <!----------------------------------------------- Footer HTML End ----------------------------------------------->
   </body>
 </html>
-<script src="mensAllProducts.js"></script>
+<script src="JS/mensAllProducts.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
