--- a/oneImageDetail.html
+++ b/oneImageDetail.html
@@ -285,4 +285,5 @@
     <!----------------------------------------------- Footer HTML End ----------------------------------------------->
   </body>
 </html>
-<script src="oneImageDetail.js"></script>
+<script src="JS/common.js" defer></script>
+<script src="JS/oneImageDetail.js"></script>
