--- a/signup.html
+++ b/signup.html
@@ -74,6 +74,6 @@
 
   <a href="Admin-Login.html"><button id="admin">Admin Login</button></a>
 </html>
-
-<script src="signup.js"></script>
+<script src="JS/common.js" defer></script>
+<script src="JS/signup.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
