--- a/womens_Index.html
+++ b/womens_Index.html
@@ -15,7 +15,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="CSS/HeaderFooter.css" />
-    <script src="JS/common.js" defer></script>
   </head>
 
   <body>
@@ -868,4 +867,5 @@
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 </html>
 
-<script src="womens_index.js"></script>
+<script src="JS/common.js" defer></script>
+<script src="JS/womens_index.js"></script>
