--- a/payment.html
+++ b/payment.html
@@ -346,6 +346,7 @@
 
 
 
-<script src="payment.js"></script>
+<script src="JS/common.js" defer></script>
+<script src="JS/payment.js"></script>
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
