--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>StyleZilla</title>
   <link rel="stylesheet" href="./CSS/MediaQ.css">
-  <link rel="stylesheet" href="./CSS/MediaQ.css">
   <link rel="stylesheet" href="./CSS/index.css">
   <link rel="stylesheet" href="./CSS/HeaderFooter.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -17,7 +16,7 @@
 
 <body>
 <!--todo--------------------------------------------- <Header Start> ----------------------------------------------->
-
+<header>
   <div id="top_bar">
     <div id="left_top">
       <h5>🚚 Free Shiping</h5>
@@ -355,6 +354,7 @@
 
   </div>
 </div>
+</header>
 <!--todo--------------------------------------------- <Header End> ----------------------------------------------->
 
 
