--- a/Admin-Login.html
+++ b/Admin-Login.html
@@ -10,11 +10,13 @@
   </head>
 
   <body>
+    <!--?-------------------------- <Navbar> --------------------------------->
     <div id="nav">
       <a href="index.html"
         ><img src="images/stylezillawithoutbackground.png"
       /></a>
     </div>
+    <!--?-------------------------- <Navbar End> --------------------------------->
     <div class="box">
       <div class="head">
         <a href="index.html"
