--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     <a href="" id="more_head">
       <h4>More</h4>
     </a>
-    <a href="signup.html" id="login_head" class="nav_menu">
-      <h4>SignUp/SignIn</h4>
-    </a>
+    <div id="login_head" class="nav_menu">
+    <h4 id="CredsName">SignUp/SignIn</h4>
+    </div>
     <a href="" id="wish_head" class="nav_menu">
       <h4>Wishlist</h4>
     </a>
@@ -805,9 +805,10 @@
     </div>
   </div>
 </section>
-<!--todo--------------------------------------------- <Footer End> ----------------------------------------------->
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<!--todo--------------------------------------------- <Footer End> ----------------------------------------------->
 <script src="JS/common.js"></script>
 <script src="JS/index.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
