--- a/checkout.html
+++ b/checkout.html
@@ -386,7 +386,8 @@
               <div id="offersub" class="checkout-subs">
                 <img
                   id="offerimg"
-                  src="https://www.lifestylestores.com/static/icons/gift-box.png"
+                  src="Images/giftbox.jpg"
+                  style="filter: brightness(1.1);"
                   alt=""
                 />
                 <div>
