--- a/index.html
+++ b/index.html
@@ -374,6 +374,26 @@
       <div class="carousel-inner" role="listbox">
         <div class="item active">
           <img
+            src="Images/banner7.gif"
+            alt="Chania" width="460" height="345">
+        </div>
+        <div class="item ">
+          <img
+            src="Images/banner8.gif"
+            alt="Chania" width="460" height="345">
+        </div>
+        <div class="item ">
+          <img
+            src="Images/banner9.jpg"
+            alt="Chania" width="460" height="345">
+        </div>
+        <div class="item ">
+          <img
+            src="Images/banner10.jpg"
+            alt="Chania" width="460" height="345">
+        </div>
+        <div class="item">
+          <img
             src="https://lmsin.net/cdn-cgi/image/w=1232,q=70,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/LS-Fest/LS-new/LS-Uber-HP-Desktop-HeroBanner6-08Dec2022.gif"
             alt="Chania" width="460" height="345">
         </div>
